# F.E.A.R-ACSM

./: .dockerignore  .env.advanced.example  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  README.md  fly.toml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_extra.txt  run_fear.py  tailwind.config.ts  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
components/: providers.tsx
components/ui/: animated-text-cycle-demo.tsx  animated-text-cycle.tsx  auth-panel.test.tsx  auth-panel.tsx  display-cards-demo.tsx  display-cards.tsx  fear-presence.tsx  mac-os-dock.tsx  memory-tab.test.tsx  memory-tab.tsx  messages.chip.test.tsx  messages.render.test.tsx  messages.test.ts  messages.tsx  settings-panel.tsx  spline-scene-demo.tsx  spotlight-cursor.tsx  theme-toggle.test.tsx  theme-toggle.tsx
docs/: PROJECT_CONTEXT.md  advanced_dependencies.md  dev_dependencies.md  refactor_diagnosis.md  setup.md  ux_ui_direction.md
fear/: __init__.py  assistant.py  config.py  logging_config.py  runtime_state.py
fear/audio/: __init__.py  microphone.py  natural_tts.py  speech_to_text.py  text_to_speech.py  voice_listener.py  wake_word.py
fear/auth/: __init__.py  security.py  store.py
fear/brain/: __init__.py  async_conversation.py  conversation.py
fear/input/: __init__.py  clap_detector.py  wearable_taps.py
fear/integrations/: __init__.py  google_calendar.py  spotify_client.py  spotify_shortcuts.py
fear/memory/: __init__.py  embedding.py  obsidian_watcher.py  personal_memory.py  vector_store.py
fear/utils/: __init__.py
fear/web/: __init__.py  api.py  app.py  ratelimit.py  runtime.py  unified_server.py  unified_server_cors.py
frontend/: app.js  index.html  styles.css
lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  chat-helpers.test.ts  chat-helpers.ts  identity.test.ts  identity.ts  memory-helpers.test.ts  memory-helpers.ts  motion.ts  speech.ts  use-auth.ts  use-conversation.test.ts  use-conversation.ts
prompts/: fear_persona.md
scripts/: apply_runtime_refactor.py  claim_memories.py  dev.sh  google_login.py  index_reference_library.py  spotify_login.py
tests/: test_async_conversation.py  test_auth.py  test_chroma_integration.py  test_chunking.py  test_gesture_mapping.py  test_personal_memory.py  test_ratelimit.py  test_reference_library.py  test_runtime_state.py  test_web.py
