[build-system]
requires = ["setuptools>=69,<76", "wheel>=0.43,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "fear-acsm"
version = "0.1.0"
description = "F.E.A.R. desktop assistant backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "openai>=1.55,<2",
  "pyttsx3>=2.90,<3",
  "chromadb>=0.5,<1",
  "spotipy>=2.24,<3",
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.35",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1,<2",
  "requests>=2.32,<3",
  "watchdog>=5,<7",
  "sentence-transformers>=3,<4",
  "google-api-python-client>=2.100,<3",
  "google-auth>=2.30,<3",
  "google-auth-oauthlib>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "types-requests>=2.32,<3",
]
# Optional microphone voice input (push-to-talk + clap detector). Needs the
# system portaudio library for pyaudio. Install with `pip install -e ".[audio]"`.
audio = [
  "openai-whisper>=20231117,<20250626",
  "pyaudio>=0.2.14,<0.3",
]

[tool.setuptools.packages.find]
include = ["fear*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses `Depends(...)` as a default value by design.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
# Teaches mypy about pydantic models (Field defaults, validation aliases, etc.).
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
